MonetDB/src/mal/Tests/tst108.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## analyse the basic interpreter loop
#
#	i:=0;
#barrier	v:=1;
#	leave v;
#	i:= 1;
#barrier t:= i<3;
#end	v;
#	i:=i+1;
#	redo t;
#end	t;
#	i:= 0;
#
!ERROR: 6:end-label 'v' doesnot match 't'
!ERROR: 9:end-label 't' doesnot match 'v'
!ERROR: 2: barrier 'v' should be of type bit
!ERROR: 6:end-label 'v' doesnot match 't'
function Admin.main():int;	#0:(main:int->0)
	i := 0;	#1:(i:int->1)($2:int->2)
barrier	v := 1;	#2:(v:int->3)($4:int->4)
	leave v;	#3:(v:int->3)
	i := 1;	#4:(i:int->1)($4:int->4)
barrier	t := arith.<(i,3);	#5:(t:bit->5)(i:int->1)($6:int->6)
end	v;	#6:(v:int->3)
	i := arith.+(i,1);	#7:(i:int->1)(i:int->1)($4:int->4)
	redo t ;	#8:(t:bit->5)
end	t;	#9:(t:bit->5)
	i := 0;	#10:(i:int->1)($2:int->2)
end function;	#11:
!ERROR: SyntaxError::'Admin.main' contains errors
>